minor visual fixes

--- a/options.html
+++ b/options.html
@@ -9,12 +9,16 @@
       font-family: 'Segoe UI', sans-serif; 
       display: flex;
       justify-content: center;
-      padding: 40px 20px;
+      align-items: center;
+      padding: 20px 10px;
       margin: 0;
+      width: 600px;
+      box-sizing: border-box;
+      min-height: 600px;
     }
     .container { 
       width: 100%;
-      max-width: 550px; 
+      max-width: 580px; 
       border: 1px solid #54E4C3; 
       padding: 30px; 
       border-radius: 16px;
